--- a/style.css
+++ b/style.css
@@ -43,4 +43,25 @@ img{
 .score-board{
     display: flex;
     justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    margin-top: 3rem;
+    gap: 5rem;
+}
+
+#user-score, #comp-score{
+    font-size: 4rem;
+}
+
+.msg-container{
+    margin-top: 5rem;
+}
+
+#msg{
+    background-color: #081b31;
+    color: #fff;
+    font-size: 2rem;
+    display: inline; 
+    padding: 1rem;
+    border-radius: 1rem;
 }
